--- a/st.css
+++ b/st.css
@@ -1,17 +1,1 @@
-ul.socialize-this{
-display:block;
-list-style:none;
-text-align:center;
-padding: 0; margin: 10px 0;
-}
-ul.socialize-this img{
-border:none;
-}
-ul.socialize-this li{
-display:inline;
-padding: 0; margin: 3px;
-opacity:0.9;
-}
-ul.socialize-this li:hover{
-opacity:1;
-}
+ul.socialize-this { display:block; list-style:none; text-align:center; margin:10px 0; padding:0; }  ul.socialize-this img { border:none; }  ul.socialize-this li { display:inline; opacity:0.9; margin:3px; padding:0; }  ul.socialize-this li:hover { opacity:1; }
